# proc_macro_template

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.crate_name }}/: Cargo.toml  README.md
{{ cookiecutter.crate_name }}/{{ cookiecutter.__macro_core_crate }}/: Cargo.toml  README.md
{{ cookiecutter.crate_name }}/{{ cookiecutter.__macro_core_crate }}/src/: lib.rs
{{ cookiecutter.crate_name }}/{{ cookiecutter.crate_name }}/: Cargo.toml  README.md
{{ cookiecutter.crate_name }}/{{ cookiecutter.crate_name }}/src/: lib.rs
